tests/pm_check/bad/pm_unreachable_nesting1.scilla
(* Expected result: *)
(* Type checking failed: *)
(* [pm_check/bad/pm_unreachable_nesting1.scilla:9:1] Type error in pattern matching on `y` of type List (Option (Int32)) (or one of its branches): *)
(* Unreachable pattern.. *)
let v = Int32 42 in
let x = Some {Int32} v in
let n = Nil {(Option Int32)} in
let y = Cons {(Option Int32)} x n in
match y with 
| Nil => Int32 3
| Cons (Some x) (Cons (Some y) _) => Int32 1
| _ => Int32 42
| Cons _ (Cons (Some y) x) => Int32 1
end
